@@ -8,10 +8,13 @@ endif
 
 DH = dh --with dkms
 
-build: build-stamp
+build-arch: build-arch-stamp
+build-indep:
+build: build-arch build-indep
+
 install: build install-stamp
 
-build-stamp install-stamp:
+build-arch-stamp install-stamp:
 	$(DH) ${@:-stamp=}
 	touch $@
 
@@ -23,4 +26,4 @@ binary: binary-arch binary-indep
 clean:
 	$(DH) $@
 
-.PHONY: build clean install binary-indep binary-arch binary 
+.PHONY: build-arch build-indep build clean install binary-indep binary-arch binary 
